_generated-doc/3.6/config/quarkus-transaction-manager-transaction-manager-configuration.adoc

:summaryTableId: quarkus-transaction-manager-transaction-manager-configuration
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-transaction-manager-transaction-manager-configuration_configuration]]link:#quarkus-transaction-manager-transaction-manager-configuration_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.node-name]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.node-name[quarkus.transaction-manager.node-name]`


[.description]
--
The node name used by the transaction manager. Must not exceed a length of 28 bytes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_NODE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_NODE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quarkus`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.shorten-node-name-if-necessary]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.shorten-node-name-if-necessary[quarkus.transaction-manager.shorten-node-name-if-necessary]`


[.description]
--
Whether the node name should be shortened if necessary. The node name must not exceed a length of 28 bytes. If this property is set to `true`, and the node name exceeds 28 bytes, the node name is shortened by calculating the link:https://en.wikipedia.org/wiki/SHA-2[SHA-224] hash, which has a length of 28 bytes.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_SHORTEN_NODE_NAME_IF_NECESSARY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_SHORTEN_NODE_NAME_IF_NECESSARY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.default-transaction-timeout]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.default-transaction-timeout[quarkus.transaction-manager.default-transaction-timeout]`


[.description]
--
The default transaction timeout.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_DEFAULT_TRANSACTION_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_DEFAULT_TRANSACTION_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|`60S`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.enable-recovery]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.enable-recovery[quarkus.transaction-manager.enable-recovery]`


[.description]
--
Start the recovery service on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_ENABLE_RECOVERY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_ENABLE_RECOVERY+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.recovery-modules]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.recovery-modules[quarkus.transaction-manager.recovery-modules]`


[.description]
--
The list of recovery modules.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_RECOVERY_MODULES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_RECOVERY_MODULES+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`com.arjuna.ats.internal.arjuna.recovery.AtomicActionRecoveryModule,com.arjuna.ats.internal.jta.recovery.arjunacore.XARecoveryModule`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.expiry-scanners]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.expiry-scanners[quarkus.transaction-manager.expiry-scanners]`


[.description]
--
The list of expiry scanners.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_EXPIRY_SCANNERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_EXPIRY_SCANNERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`com.arjuna.ats.internal.arjuna.recovery.ExpiredTransactionStatusManagerScanner`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.xa-resource-orphan-filters]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.xa-resource-orphan-filters[quarkus.transaction-manager.xa-resource-orphan-filters]`


[.description]
--
The list of orphan filters.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_XA_RESOURCE_ORPHAN_FILTERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_XA_RESOURCE_ORPHAN_FILTERS+++`
endif::add-copy-button-to-env-var[]
--|list of string 
|`com.arjuna.ats.internal.jta.recovery.arjunacore.JTATransactionLogXAResourceOrphanFilter,com.arjuna.ats.internal.jta.recovery.arjunacore.JTANodeNameXAResourceOrphanFilter,com.arjuna.ats.internal.jta.recovery.arjunacore.JTAActionStatusServiceXAResourceOrphanFilter`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.directory]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.directory[quarkus.transaction-manager.object-store.directory]`


[.description]
--
The name of the directory where the transaction logs will be stored when using the `file-system` object store. If the value is not absolute then the directory is relative to the _user.dir_ system property.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_DIRECTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_DIRECTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|`ObjectStore`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.type]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.type[quarkus.transaction-manager.object-store.type]`


[.description]
--
The type of object store.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_TYPE+++`
endif::add-copy-button-to-env-var[]
-- a|
`file-system`, `jdbc` 
|`file-system`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.datasource]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.datasource[quarkus.transaction-manager.object-store.datasource]`


[.description]
--
The name of the datasource where the transaction logs will be stored when using the `jdbc` object store.

If undefined, it will use the default datasource.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_DATASOURCE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_DATASOURCE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.create-table]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.create-table[quarkus.transaction-manager.object-store.create-table]`


[.description]
--
Whether to create the table if it does not exist.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_CREATE_TABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_CREATE_TABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.drop-table]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.drop-table[quarkus.transaction-manager.object-store.drop-table]`


[.description]
--
Whether to drop the table on startup.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_DROP_TABLE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_DROP_TABLE+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.table-prefix]]`link:#quarkus-transaction-manager-transaction-manager-configuration_quarkus.transaction-manager.object-store.table-prefix[quarkus.transaction-manager.object-store.table-prefix]`


[.description]
--
The prefix to apply to the table.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_TABLE_PREFIX+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_TRANSACTION_MANAGER_OBJECT_STORE_TABLE_PREFIX+++`
endif::add-copy-button-to-env-var[]
--|string 
|`quarkus_`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
